# yew-app

./: Cargo.toml  bootstrap.js  package-lock.json  package.json  webpack.config.js
src/: app.rs
static/: index.html  manifest.json
