[package]
name = "yew-wasm-pack-template"
version = "0.2.0"
authors = ["Yew Maintainers <maintainers@yew.rs"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.19.2"
strum_macros = "0.19.2"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.67"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'KeyboardEvent',
]
